--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,13 +2,12 @@ site_name: My Docs
 nav:
      - Home: index.md
      - Docker: install_docker.md
+     - AtoM: install_atom.md
      - Traefik: traefik.md
      - Portainer: portainer.md
      - Grafana: install_grafana.md
-     - AtoM: install_atom.md
      - Migrasi Data: migrasi.md
      - Best Practice Migrasi Perpusnas ANRI: bestpractise.md
-     - Custom AtoM: custom_atom.md
      - Extend Disk Size: extend_disk.md
      - Generate SSH key on Putty: generate_ssh.md
      - Grafana: grafana.md
@@ -23,10 +22,14 @@ nav:
      - Membuat docker image: membuat_docker_image.md
      - Mounting new disk in server: mounting_new_disk.md
      - NFS in Docker Swarm: nfs_in_dockerswarm.md
-     - Permasalahan yang sering terjadi: permasalahandns.md
+     - Permasalahan yang sering terjadi: permasalahan.md
      - Query Data Kearsipan: query_data_kearsipan.md
      - Setup HA app with Docker Swarm and Gulster: setup_ha.md
      - Share data among machines [docker]: share_data.md
      - Traefik and Own SSL certs: traefik_ownssl_certs.md
+     - Mail Setting Helpdesk: mailhelpdesk.md
+     - Data PIC Helpdesk Nasional: pic_helpdesk.md
+     - Data Survey Kepuasan Layanan SIKN dan JIKN: kepuasan_layanan.md
+     - Data Layanan SIKN dan JIKN: layanan_sjikn.md
 
 theme: readthedocs
